api-gw/routes.yaml
 ---
apiVersion: gateway.networking.k8s.io/v1alpha2
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: consul-echo
  namespace: consul
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: api-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: consul-echo
      namespace: default
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: root-route
  namespace: consul
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: api-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: http-echo
      namespace: default
      port: 3000
---
apiVersion: gateway.networking.k8s.io/v1alpha2
# HTTPRoute routes HTTP requests to backend services.
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: consul
spec:
  # Defines the gateway listener.
  parentRefs:
  - name: api-gateway
  # Rules define behaviors for network traffic that goes through the route.
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /helloworld
    # Defines the backend service.
    backendRefs:
    - kind: Service
      name: http-echo
      namespace: default
      port: 3000
